ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:  
  ingressClassName: nginx
  rules:
    - host: pg.ginonino.online
      http:   
        paths:   
          - path: /   
            pathType: Prefix   
            backend:   
              service:   
                name: nginx   
                port:   
                  number: 80
#   - host: gs.ginonino.online
#     http:   
#       paths:   
#         - path: /   
#           pathType: Prefix   
#           backend:   
#             service:   
#               name: geoserver-svc   
#               port:   
#                 number: 8080
